# UNO-FOCHE

./: README.md  game_structures.h  graphics.c  logic.c  main.c
6.0/: main.c  uno_game
UNO 1vs1 5.0/: CMakeLists.txt  audio.c  audio.h  game.c  game.h  graphics.c  graphics.h
UNO 1vs1 CORRETTO 2.0/: audio.c  audio.h  game.c  game.h  graphics.c  graphics.h  main.c
UNO 3.0/: audio.c  audio.h  game.c  game.h  graphics.c  graphics.h  main.c
UNO CORRETTO 2.0/: audio.c  game.c  game.h  graphics.c  graphics.h  main.c
UNO4.0/: audio.c  game.c  game.h  graphics.c  graphics.h  main.c  uno_game
UNOFAKE/: CMakeLists.txt  carte.c  carte.h  giocatore.c  giocatore.h  gioco.c  gioco.h  main.c  mazzo.c  mazzo.h
UNOsemifake/: CMakeLists.txt  audio.c  game.c  game.h  graphics.c  graphics.h  main.c
